add include files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE>
 <html>
-    
+    <head>
+        {% include header.html %}
+        <title>Me</title>
+    </head>
+    <body>
+        {% include footer.html %}
+    </body>
 </html>
