--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE>
 <html>
     <head>
+        {% raw %}
         {% include header.html %}
+        {% endraw %}
         <title>Me</title>
     </head>
     <body>
