add contact and about page, refine style

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 ---
-title: index page
-permalink: index.html
+title: about page
+permalink: about.html
 ---
 <!DOCTYPE>
 <html>
     <head>
         {% include header.html %}
-        <title>Me</title>
+        <title>About Me</title>
     </head>
     <body>
         {% include navgation.html %}
