--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 ---
-title: index page
-permalink: index.html
+title: contact page
+permalink: contact.html
 ---
 <!DOCTYPE>
 <html>
     <head>
         {% include header.html %}
-        <title>Me</title>
+        <title>Contact Me</title>
     </head>
     <body>
         {% include navgation.html %}
