change contact and about page

--- a/about.html
+++ b/about.html
@@ -1,15 +1,5 @@
 ---
-title: about page
+layout: default
+title: About Me
 permalink: about.html
 ---
-<!DOCTYPE>
-<html>
-    <head>
-        {% include header.html %}
-        <title>About Me</title>
-    </head>
-    <body>
-        {% include navgation.html %}
-        {% include footer.html %}
-    </body>
-</html>
