--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,5 @@
 ---
-title: contact page
+layout: default
+title: Contact Me
 permalink: contact.html
 ---
-<!DOCTYPE>
-<html>
-    <head>
-        {% include header.html %}
-        <title>Contact Me</title>
-    </head>
-    <body>
-        {% include navgation.html %}
-        {% include footer.html %}
-    </body>
-</html>
